--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-top">
       <div class="container">
         <div class="navbar-header">
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#headNav" aria-expanded="false" aria-controls="headNav"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#headNav" aria-expanded="false" aria-controls="headNav"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand jf-jinxuan-book">
             <div class="logo_content">
               <p>張伯宇</p>
               <p class="sub">UI/UX Desginer</p>
