--- a/index.html
+++ b/index.html
@@ -16,97 +16,64 @@
       
       ga('create', 'UA-90594538-2', 'auto');
       ga('send', 'pageview');
-    </script>
-    <script type="text/javascript">
-      var _jf = _jf || [];_jf.push(['p','53653']);_jf.push(['_setFont','naughty','css',' .naughty']);_jf.push(['_setFont','naughty','alias','naughty']);_jf.push(['_setFont','naughty','weight',600]);_jf.push(['_setFont','jf-jinxuan-medium','css','.jf-jinxuan-medium']);_jf.push(['_setFont','jf-jinxuan-medium','alias','jf-jinxuan']);_jf.push(['_setFont','jf-jinxuan-medium','weight',500]);_jf.push(['_setFont','jf-jinxuan-ultralight','css','.jf-jinxuan-ultralight']);_jf.push(['_setFont','jf-jinxuan-ultralight','alias','jf-jinxuan']);_jf.push(['_setFont','jf-jinxuan-ultralight','weight',100]);_jf.push(['_setFont','jf-jinxuan-light','css','.jf-jinxuan-light']);_jf.push(['_setFont','jf-jinxuan-light','alias','jf-jinxuan']);_jf.push(['_setFont','jf-jinxuan-light','weight',200]);_jf.push(['_setFont','jf-jinxuan-book','css','.jf-jinxuan-book']);_jf.push(['_setFont','jf-jinxuan-book','alias','jf-jinxuan']);_jf.push(['_setFont','jf-jinxuan-book','weight',300]);_jf.push(['_setFont','jf-jinxuan-regular','css','.jf-jinxuan-regular']);_jf.push(['_setFont','jf-jinxuan-regular','alias','jf-jinxuan']);_jf.push(['_setFont','jf-jinxuan-regular','weight',400]);_jf.push(['_setFont','jf-liao','css','.jf-liao']);_jf.push(['_setFont','jf-liao','alias','jf-liao']);_jf.push(['_setFont','jf-liao','weight',500]);(function(f,q,c,h,e,i,r,d){var k=f._jf;if(k.constructor===Object){return}var l,t=q.getElementsByTagName("html")[0],a=function(u){for(var v in k){if(k[v][0]==u){if(false===k[v][1].call(k)){break}}}},j=/\S+/g,o=/[\t\r\n\f]/g,b=/^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g,g="".trim,s=g&&!g.call("\uFEFF\xA0")?function(u){return u==null?"":g.call(u)}:function(u){return u==null?"":(u+"").replace(b,"")},m=function(y){var w,z,v,u,x=typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):" ";if(z){u=0;while((v=w[u++])){if(z.indexOf(" "+v+" ")<0){z+=v+" "}}t[c]=s(z)}}},p=function(y){var w,z,v,u,x=arguments.length===0||typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):"";if(z){u=0;while((v=w[u++])){while(z.indexOf(" "+v+" ")>=0){z=z.replace(" "+v+" "," ")}}t[c]=y?s(z):""}}},n;k.push(["_eventActived",function(){p(h);m(e)}]);k.push(["_eventInactived",function(){p(h);m(i)}]);k.addScript=n=function(u,A,w,C,E,B){E=E||function(){};B=B||function(){};var x=q.createElement("script"),z=q.getElementsByTagName("script")[0],v,y=false,D=function(){x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;a("_eventInactived");B()};if(C){v=setTimeout(function(){D()},C)}x.type=A||"text/javascript";x.async=w;x.onload=x.onreadystatechange=function(G,F){if(!y&&(!x.readyState||/loaded|complete/.test(x.readyState))){y=true;if(C){clearTimeout(v)}x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;if(!F){setTimeout(function(){E()},200)}}};x.onerror=function(H,G,F){if(C){clearTimeout(v)}D();return true};x.src=u;z.parentNode.insertBefore(x,z)};a("_eventPreload");m(h);n(r,"text/javascript",false,3000)})(this,this.document,"className","jf-loading","jf-active","jf-inactive","//ds.justfont.com/js/stable/v/5.0.3/id/141890888191");
       
     </script>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="100">
     <nav class="navbar navbar-top">
       <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#headNav" aria-expanded="false" aria-controls="headNav"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand jf-jinxuan-book">
+        <div class="navbar-header"><a class="navbar-brand">
             <div class="logo_content">
-              <p>張伯宇</p>
-              <p class="sub">UI/UX Desginer</p>
-            </div></a>
-        </div>
-        <div class="navbar-collapse collapse" id="headNav">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#banner">All</a></li>
-            <li><a href="#about">Web</a></li>
-            <li><a href="#skills">App</a></li>
-          </ul>
-        </div>
+              <p>Po Yu Chang</p>
+              <p class="sub">UI/UX DESGINER</p>
+            </div></a></div>
       </div>
     </nav>
     <section id="works">
       <div class="container">
         <div class="row work-items">
-          <div class="col-xs-12 col-sm-6 work-item web"><img src="images/work-web1.png" alt=""/>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work-ui1.png" alt=""/>
             <div class="work-item-info">
-              <div class="cell">
-                <div class="content">
-                  <h2>標準型網站</h2>
-                  <p>一般傳統式的官方網站,使用HTML/CSS</p><a class="btn-work-item" href="#item1" data-toggle="modal">View Details</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 work-item web"><img src="images/work-web2.png" alt=""/>
-            <div class="work-item-info">
-              <div class="cell">
-                <div class="content">
-                  <h2>網格型網頁</h2>
-                  <p>以Grid layout的概念做設計,使用HTML/CSS/JavaScript</p><a class="btn-work-item" href="#item2" data-toggle="modal">View Details</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 work-item ui"><img src="images/work-ui1.png" alt=""/>
-            <div class="work-item-info">
-              <div class="cell">
-                <div class="content">
+              <div class="cell"><a class="content" href="#item1" data-toggle="modal">
                   <h2>Puzzle Time</h2>
-                  <p>一個簡潔、便利的時間管理app,可以用於一般行事或是專案管理使用</p><a class="btn-work-item" href="#item3" data-toggle="modal">View Details</a>
-                </div>
-              </div>
+                  <p>一個簡潔、便利的時間管理app,可以用於一般行事或是專案管理使用</p></a></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 work-item web"><img src="images/work-web3.png" alt=""/>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work-ui2.png" alt=""/>
             <div class="work-item-info">
-              <div class="cell">
-                <div class="content">
-                  <h2>一頁式網站</h2>
-                  <p>設計現在最常見的一頁式網站,使用HTML/CSS/JavaScript</p><a class="btn-work-item" href="#item4" data-toggle="modal">View Details</a>
-                </div>
-              </div>
+              <div class="cell"><a class="content" href="#item2" data-toggle="modal">
+                  <h2>艾蜜莉定存股</h2>
+                  <p>針對股市中的定存股族群，所設計的一款App</p></a></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 work-item web"><img src="images/work-web4.png" alt=""/>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work-web4.png" alt=""/>
             <div class="work-item-info">
-              <div class="cell">
-                <div class="content">
-                  <h2>作品集網站</h2>
-                  <p>以自己作品集的網站為例,從設計到切版的過程紀錄,以Bootstrap為基礎做設計,此網頁為RWD響應式網站</p><a class="btn-work-item" href="#item5" data-toggle="modal">View Details</a>
-                </div>
-              </div>
+              <div class="cell"><a class="content" href="#item2" data-toggle="modal">
+                  <h2>艾蜜莉定存股</h2>
+                  <p>針對股市中的定存股族群，所設計的一款App</p></a></div>
             </div>
           </div>
         </div>
       </div>
       <div class="modal fade work-detail" id="item1" role="dialog">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
-              <h4 class="modal-title">標準型網站</h4>
-              <p>#Web #Blog</p>
+              <h4 class="modal-title">Puzzle Time</h4>
+              <p>＃企劃發想＃流程規劃＃介面設計＃Pototype</p>
             </div>
-            <div class="modal-body"><img src="images/work-web1.png" alt=""/></div>
-            <div class="modal-footer"><a href="http://e032386.github.io/standard-layout/" target="_blank">連結</a>
-              <p>屬於一般傳統型的網站,有最新消息、文章等的區塊,此網頁沒有針對不同尺寸的螢幕做設計。</p>
-              <p>使用技術:HTML、CSS</p>
+            <div class="modal-body">
+              <div class="container"><img src="images/work-ui1.png" alt=""/>
+                <div class="row info">
+                  <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
+                  <div class="col-sm-8 modal-text">
+                    <p>發想來自在工作的時候，時常無法將工作天數評估良好，造成同一時間的工作量暴增，甚至是接回來才發現其他部門的工作量早已不堪負荷。</p>
+                    <p>已現有的行事曆軟體都是以自己算時間，然後寫上事項，但其實很花時間；如果這時候，新增事項是可以用工作天數為估算，並把每一個事項的工作天數填完後再新增，這樣子所有案子的時程就一目瞭然，而且再新增事項上所花的時間也會少很多。</p>
+                  </div>
+                </div>
+                <div class="row"><img class="col-sm-6" src="images/ui-1.png" alt=""/><img class="col-sm-6" src="images/ui-04.png" alt=""/></div>
+                <div class="row"><img class="col-sm-4" src="images/ui-02.gif" alt=""/><img class="col-sm-4" src="images/ui-04.gif" alt=""/><img class="col-sm-4" src="images/ui-08.gif" alt=""/></div>
+              </div>
             </div>
           </div>
         </div>
@@ -115,55 +82,26 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
-              <h4 class="modal-title">網格型網頁</h4>
-              <p>#Web #GridLayout</p>
-            </div>
-            <div class="modal-body"><img src="images/work-web2.png" alt=""/></div>
-            <div class="modal-footer"><a href="http://e032386.github.io/grid-layout/" target="_blank">連結</a>
-              <p>使用Grid layout來做網頁版面設計,風格為美食可愛的感覺,區塊會隨著瀏覽器的尺寸大小而自動地調整及移動。</p>
-              <p>使用語言:HTML、CSS、JavaScript(jQuery外掛-Masonry)</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal fade work-detail" id="item3" role="dialog">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
-              <h4 class="modal-title">Puzzle Time</h4>
-              <p>#UI #Time #Prototype</p>
+              <h4 class="modal-title">艾蜜莉定存股App</h4>
+              <p>＃介面設計＃Pototype＃使用者研究＃Ios/Android雙平台</p>
             </div>
             <div class="modal-body">
-              <p>«月份切換»</p><img src="images/ui-01.gif" alt=""/>
-              <p>«週/月切換»</p><img src="images/ui-02.gif" alt=""/>
-              <p>«選單»</p><img src="images/ui-03.gif" alt=""/>
-              <p>«新增事項»</p><img src="images/ui-04.gif" alt=""/>
-              <p>«事項複製»</p><img src="images/ui-05.gif" alt=""/>
-              <p>«事項移動/刪除»</p><img src="images/ui-06.gif" alt=""/>
-              <p>«事項修改»</p><img src="images/ui-07.gif" alt=""/>
-              <p>«新增任務»</p><img src="images/ui-08.gif" alt=""/>
-            </div>
-            <div class="modal-footer"><a href="images/ui-flow.jpg" target="_blank">簡介圖</a><br/><a href="https://youtu.be/NyckF-wmBWY" target="_blank">操作影片</a>
-              <p>發想來自在工作的時候,時常都會沒把工作天估好,造成可能會同時間需要驗收,甚至是接回來才發現其他部門的工作量是卡死的。但以往的記事軟體都是自己算時間,然後寫上事項,其實很花時間;如果這時候新增事項是可以用工作天估算,把每一個事項的工作天填完後再新增,這樣子所有案子的時程就一目瞭然,而且再新增上所花的時間也會少很多。</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal fade work-detail" id="item4" role="dialog">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
-              <h4 class="modal-title">一頁式網頁</h4>
-              <p>#Web #Singlepage</p>
-            </div>
-            <div class="modal-body"><img src="images/work-web3.png" alt=""/></div>
-            <div class="modal-footer"><a href="http://e032386.github.io/singlepage-layout/" target="_blank">連結</a>
-              <p>使用現在最流行的Singlepage來做網頁版面設計,整體風格簡潔,屬於個人型的網站。</p>
-              <p>使用語言:HTML、CSS、JavaScript</p>
+              <div class="container"><img src="images/work-ui2.png" alt=""/>
+                <div class="row info">
+                  <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
+                  <div class="col-sm-8 modal-text">
+                    <p>艾蜜莉定存股，是依據小資女艾蜜莉的投資策略，所規劃出的軟體。在之前只有桌機版本，後來依據App的使用情境與體驗，在2017年推出App版本。剛推時出時在Ios的熱門搜尋上出現，並且登上Ios不分類免費下載第13名。</p>
+                    <p>目前上架一年，累積下載量已超過40萬，每週活躍用戶達3萬人。</p>
+                  </div>
+                </div>
+                <div class="row"><img class="col-sm-12" src="images/ui-flow.png" alt=""/></div>
+                <div class="row"><img class="col-sm-4" src="images/ui-02.gif" alt=""/><img class="col-sm-4" src="images/ui-04.gif" alt=""/><img class="col-sm-4" src="images/ui-08.gif" alt=""/></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="modal fade work-detail" id="item2" role="dialog"></div>
       <div class="modal fade work-detail" id="item5" role="dialog">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
@@ -186,7 +124,7 @@
   </body>
   <footer>
     <div class="container">
-      <p>Copyright © 2016 soso. All Rights Reserved.</p>
+      <p>Copyright © 2018 soso. All Rights Reserved.</p>
     </div>
   </footer>
 </html>
