--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
     </script>
   </head>
-  <body data-spy="scroll" data-target=".navbar" data-offset="100">
+  <body>
     <nav class="navbar navbar-top">
       <div class="container">
         <div class="navbar-header"><a class="navbar-brand">
@@ -32,21 +32,21 @@
     <section id="works">
       <div class="container">
         <div class="row work-items">
-          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work-ui1.png" alt=""/>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui1.png" alt=""/>
             <div class="work-item-info">
               <div class="cell"><a class="content" href="#item1" data-toggle="modal">
                   <h2>Puzzle Time</h2>
                   <p>一個簡潔、便利的時間管理app,可以用於一般行事或是專案管理使用</p></a></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work-ui2.png" alt=""/>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui2.png" alt=""/>
             <div class="work-item-info">
               <div class="cell"><a class="content" href="#item2" data-toggle="modal">
                   <h2>艾蜜莉定存股</h2>
                   <p>針對股市中的定存股族群，所設計的一款App</p></a></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work-web4.png" alt=""/>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui3.png" alt=""/>
             <div class="work-item-info">
               <div class="cell"><a class="content" href="#item3" data-toggle="modal">
                   <h2>作品集網站</h2>
@@ -63,7 +63,7 @@
               <p>＃企劃發想＃流程規劃＃介面設計＃Pototype</p>
             </div>
             <div class="modal-body">
-              <div class="container"><img src="images/work-ui1.png" alt=""/>
+              <div class="container"><img src="images/work_ui1.png" alt=""/>
                 <div class="row info">
                   <div class="col-xs-12 col-sm-4 modal-subtitle">DESCRIPTION</div>
                   <div class="col-xs-12 col-sm-8 modal-text">
@@ -71,8 +71,8 @@
                     <p>已現有的行事曆軟體都是以自己算時間，然後寫上事項，但其實很花時間；如果這時候，新增事項是可以用工作天數為估算，並把每一個事項的工作天數填完後再新增，這樣子所有案子的時程就一目瞭然，而且再新增事項上所花的時間也會少很多。</p>
                   </div>
                 </div>
-                <div class="row"><img class="col-xs-12 col-sm-6" src="images/ui-1.png" alt=""/><img class="col-xs-12 col-sm-6" src="images/ui-04.png" alt=""/></div>
-                <div class="row"><img class="col-xs-12 col-sm-4" src="images/ui-02.gif" alt=""/><img class="col-xs-12 col-sm-4" src="images/ui-04.gif" alt=""/><img class="col-xs-12 col-sm-4" src="images/ui-08.gif" alt=""/></div>
+                <div class="row"><img class="col-xs-12 col-sm-6" src="images/ui1_01.png" alt=""/><img class="col-xs-12 col-sm-6" src="images/ui1_02.png" alt=""/></div>
+                <div class="row"><img class="col-xs-12 col-sm-4" src="images/ui1_03.gif" alt=""/><img class="col-xs-12 col-sm-4" src="images/ui1_04.gif" alt=""/><img class="col-xs-12 col-sm-4" src="images/ui1_05.gif" alt=""/></div>
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
               <p>＃介面設計＃Pototype＃使用者研究＃Ios/Android雙平台</p>
             </div>
             <div class="modal-body">
-              <div class="container"><img src="images/work-ui2.png" alt=""/>
+              <div class="container"><img src="images/work_ui2.png" alt=""/>
                 <div class="row info">
                   <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
                   <div class="col-sm-8 modal-text">
@@ -94,14 +94,14 @@
                     <p>目前上架一年，累積下載量已超過40萬，每週活躍用戶達3萬人。</p>
                   </div>
                 </div>
-                <div class="row"><img class="col-sm-12" src="images/UI_showcase.png" alt=""/></div>
+                <div class="row"><img class="col-sm-12" src="images/ui2_01.png" alt=""/></div>
                 <div class="row info">
                   <div class="col-sm-4 modal-subtitle">POSITION</div>
                   <div class="col-sm-8 modal-text">
                     <p>當初在使用者族群上，除了鎖定既有正在使用桌機版軟體的人之外，希望吸引小資族群。所以在顏色上使用與小資女形象相符的粉紅色，並且以白色作為底色。營造出有別於股市黑底的形象。</p>
                   </div>
                 </div>
-                <div class="row"><img class="col-sm-12" src="images/UI-flow.png" alt=""/></div>
+                <div class="row"><img class="col-sm-12" src="images/ui2_02.png" alt=""/></div>
                 <div class="row info">
                   <div class="col-sm-4 modal-subtitle">PROCESS</div>
                   <div class="col-sm-8 modal-text">
@@ -121,14 +121,14 @@
               <p>＃介面設計＃Pototype</p><a href="https://e032386.github.io/CV/">前往看看</a>
             </div>
             <div class="modal-body">
-              <div class="container"><img src="images/work-web4.png" alt=""/>
+              <div class="container"><img src="images/work_ui3.png.png" alt=""/>
                 <div class="row info">
                   <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
                   <div class="col-sm-8 modal-text">
                     <p>以自己作品集的網站為例,從設計到切版的過程紀錄,以Bootstrap為基礎做設計,此網頁為RWD響應式網站</p>
                   </div>
                 </div>
-                <div class="row"><img class="col-sm-12" src="images/wireframe.png" alt=""/><img class="col-sm-12" src="images/mockup.png" alt=""/></div>
+                <div class="row"><img class="col-sm-12" src="images/ui3_01.png" alt=""/><img class="col-sm-12" src="images/ui3_02.png" alt=""/></div>
                 <div class="row info">
                   <div class="col-sm-4 modal-subtitle">PROCESS</div>
                   <div class="col-sm-8 modal-text">
