--- a/index.html
+++ b/index.html
@@ -53,6 +53,34 @@
                   <p>第一版作品集網站</p></a></div>
             </div>
           </div>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui4.png" alt=""/>
+            <div class="work-item-info">
+              <div class="cell"><a class="content" href="#item4" data-toggle="modal">
+                  <h2>聊天機器人</h2>
+                  <p>模擬Chatbot的使用情境</p></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui5.png" alt=""/>
+            <div class="work-item-info">
+              <div class="cell"><a class="content" href="#item5" data-toggle="modal">
+                  <h2>理財寶瘋拉霸</h2>
+                  <p>一個活動網頁</p></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui6.png" alt=""/>
+            <div class="work-item-info">
+              <div class="cell"><a class="content" href="#item6" data-toggle="modal">
+                  <h2>原創社</h2>
+                  <p>一間虛構的出版社平台的識別設計</p></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 work-item"><img src="images/work_ui7.png" alt=""/>
+            <div class="work-item-info">
+              <div class="cell"><a class="content" href="#item7" data-toggle="modal">
+                  <h2>平面視覺</h2>
+                  <p>一些平面視覺設計的海報</p></a></div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="modal fade work-detail" id="item1" role="dialog">
@@ -118,7 +146,7 @@
           <div class="modal-content">
             <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
               <h4 class="modal-title">作品集網站</h4>
-              <p>＃介面設計＃Pototype</p><a href="https://e032386.github.io/CV/">前往看看</a>
+              <p>＃Web ＃Singlepage ＃galley ＃Bootstrap ＃RWD</p><a href="https://e032386.github.io/CV/">前往看看</a>
             </div>
             <div class="modal-body">
               <div class="container"><img src="images/work_ui3.png.png" alt=""/>
@@ -135,6 +163,90 @@
                     <p>試著畫wireframe開始,規劃網頁元素的區塊以及在不同尺寸上的呈現樣式。再將實際的圖與文字套上,變成mockup。並以Bootstrap為基礎,再套上filter,Masonry,Parallax Scrolling等效果。</p>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade work-detail" id="item4" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
+              <h4 class="modal-title">聊天機器人</h4>
+              <p>＃介面設計＃Pototype</p><a href="https://share.protopie.io/azJSGb49FQZ">前往看看</a>
+            </div>
+            <div class="modal-body">
+              <div class="container"><img src="images/work_ui4.png" alt=""/>
+                <div class="row info">
+                  <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
+                  <div class="col-sm-8 modal-text">
+                    <p>針對目前流行的chatbot，設計介面與模擬操作環境。</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade work-detail" id="item5" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
+              <h4 class="modal-title">理財寶瘋拉霸</h4>
+              <p>＃Webdesgin ＃Singlepage ＃RWD</p>
+            </div>
+            <div class="modal-body">
+              <div class="container"><img src="images/work_ui5.png" alt=""/>
+                <div class="row info">
+                  <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
+                  <div class="col-sm-8 modal-text">
+                    <p>一個活動型網頁，讓消費者可以用購物金，來換取獎品。</p>
+                  </div>
+                </div>
+                <div class="row"><img class="col-sm-12" src="images/ui5_01.png" alt=""/></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade work-detail" id="item6" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
+              <h4 class="modal-title">原創社</h4>
+              <p>＃CIS</p>
+            </div>
+            <div class="modal-body">
+              <div class="container"><img src="images/work_ui6.png" alt=""/>
+                <div class="row info">
+                  <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
+                  <div class="col-sm-8 modal-text">
+                    <p>(以下為虛構)</p>
+                    <p>為了讓台灣本土的新世代作家所創立的平台,立志於為年輕新一代 提供更多資源、發聲的機會。</p>
+                  </div>
+                </div>
+                <div class="row"><img class="col-sm-12" src="images/ui6_01.jpg" alt=""/><img class="col-sm-12" src="images/ui6_02.jpg" alt=""/><img class="col-sm-12" src="images/ui6_03.jpg" alt=""/><img class="col-sm-12" src="images/ui6_04.jpg" alt=""/><img class="col-sm-12" src="images/ui6_05.jpg" alt=""/><img class="col-sm-12" src="images/ui6_06.jpg" alt=""/><img class="col-sm-12" src="images/ui6_07.jpg" alt=""/><img class="col-sm-12" src="images/ui6_08.jpg" alt=""/><img class="col-sm-12" src="images/ui6_09.jpg" alt=""/><img class="col-sm-12" src="images/ui6_10.jpg" alt=""/><img class="col-sm-12" src="images/ui6_11.jpg" alt=""/><img class="col-sm-12" src="images/ui6_12.jpg" alt=""/></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade work-detail" id="item7" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header"><span class="close" data-dismiss="modal">&times;</span>
+              <h4 class="modal-title">平面視覺</h4>
+              <p>＃Illustrator</p>
+            </div>
+            <div class="modal-body">
+              <div class="container"><img src="images/work_ui7.png" alt=""/>
+                <div class="row info">
+                  <div class="col-sm-4 modal-subtitle">DESCRIPTION</div>
+                  <div class="col-sm-8 modal-text">
+                    <p>目前正在嘗試做平面設計，這是目前還在摸索的各種不同風格。</p>
+                  </div>
+                </div>
+                <div class="row"><img class="col-sm-12" src="images/ui7_01.png" alt=""/><img class="col-sm-12" src="images/ui7_02.png" alt=""/></div>
               </div>
             </div>
           </div>
